<?xml version="1.0"?>
<package format="2">
  <name>disturbing_points_detector</name>
  <version>0.0.0</version>
  <description>The disturbing_points_detector package</description>

  <maintainer email="amsl@todo.todo">amsl</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf2_ros</build_depend>
  <exec_depend>tf2_ros</exec_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <export>

  </export>
</package>
